--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,15 @@ spring.ldap.base=dc=ttd,dc=com
 spring.ldap.username=cn=admin,dc=ttd,dc=com
 spring.ldap.password=secret
 server.port=2001
+
+
+##DB Setting Properties
+spring.datasource.url=jdbc:mysql://localhost:3306/ttd
+spring.datasource.username=root
+spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.user.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
